tests/corpus/source_to_intent_parser/accepted/accepted_softmax_reduction.tucsrc
@triton.jit
def softmax_reduction(x, y):
    normalized = tl.softmax(x, axis=1)
    row_sum = tl.sum(normalized, axis=1)
    tl.store(y, row_sum)
