tests/corpus/source_to_intent_parser/rejected/reject_ambiguous_softmax_axis.tucsrc
@triton.jit
def ambiguous_softmax_axis(x, y):
    normalized = tl.softmax(x)
    tl.store(y, normalized)
